Use mainline zephyr
- Seems micropython works fine with mainline zephyr. So best to use
  mainline, atleast for continuous builds

Signed-off-by: Ayush Singh <ayush@beagleboard.org>

--- a/upstream_boards/west.yml
+++ b/upstream_boards/west.yml
@@ -10,19 +10,15 @@ manifest:
       url-base: https://github.com/zephyrproject-rtos
     - name: micropython
       url-base: https://github.com/micropython
-    - name: beagle
-      url-base: https://github.com/beagleboard/
 
   projects:
     - name: zephyr
-      remote: beagle
-      revision: zephyr-4.0.0
+      remote: zephyrproject-rtos
+      revision: main
       import:
         name-allowlist:
           - hal_ti
-          - cmsis
-          # FIXME: cmsis_6 will be required from v4.1.0
-          # - cmsis_6
+          - cmsis_6
 
     - name: micropython
       remote: micropython
