--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -13,10 +13,6 @@ jobs:
   build:
     name: Build Artifacts for supported boards
     runs-on: ubuntu-22.04
-    env:
-      BOARDS: |
-        beagleconnect_freedom
-        beagleplay/cc1352p7
     steps:
       - name: Checkout
         uses: actions/checkout@v4
@@ -32,13 +28,38 @@ jobs:
           app-path: upstream_boards
           toolchains: arm-zephyr-eabi
 
-      - name: Building Firmware
+      - name: Setup
         run: |
           mkdir dist
-          for BOARD in $BOARDS; do
-            OUTPUT_FILE=$(echo "$BOARD" | sed 's/\//_/g').bin
-            west build -p -b "$BOARD" modules/lib/micropython/ports/zephyr -d build
-            mv build/zephyr/zephyr.bin "dist/$OUTPUT_FILE"
+          jq -n '[]' > os_list.json
+
+      - name: Building For BeagleConnect Freedom
+        run: |
+            west build -p -b beagleconnect_freedom modules/lib/micropython/ports/zephyr -d build
+            mv build/zephyr/zephyr.bin dist/beagleconnect-freedom.bin
+
+      - name: Building For BeaglePlay
+        run: |
+            west build -p -b beagleplay/cc1352p7 modules/lib/micropython/ports/zephyr -d build
+            mv build/zephyr/zephyr.bin dist/beagle-am62.bin
+
+      - name: Compress all binaries
+        run: xz -z dist/*.bin
+
+      - name: Generate OS List
+        env:
+          OS_LIST_NAME: "MicroPython"
+          OS_LIST_DESC: "MicroPython is a lean and efficient implementation of the Python 3 programming language, specifically designed to run on microcontrollers and other embedded systems"
+          OS_LIST_ICON: "https://en.wikipedia.org/wiki/File:Micropython-logo.svg"
+        run: |
+          for board_firm in dist/*.bin.xz; do
+            fname=$(basename $board_firm)
+            export DEVICE=${fname%.bin.xz}
+            export SHA=$(sha256sum $board_firm | cut -d " " -f 1)
+            export URL="https://github.com/beagleboard/micropython-builder/releases/download/continuous-release/${fname}"
+            export RELEASE_DATE=$(date +"%Y-%m-%d")
+            jq '. += [{ "name": env.OS_LIST_NAME, "description": env.OS_LIST_DESC, "icon": env.OS_LIST_ICON, "devices": [ env.DEVICE ], "tags": [ "zephyr" ], "image_download_sha256": env.SHA, "url": env.URL, "release_date": env.RELEASE_DATE }]' os_list.json > os_list.json.tmp
+            mv os_list.json.tmp os_list.json
           done
 
       - name: Pre-Release
@@ -50,4 +71,5 @@ jobs:
           tag_name: continuous-release
           body: Continuous builds of MicroPython
           files: |
-            dist/*.bin
+            dist/*.bin.xz
+            os_list.json
