github: workflows: release: Add extract_size to os_list
- Required in bb-imager-rs now

Signed-off-by: Ayush Singh <ayush@beagleboard.org>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -52,7 +52,8 @@ jobs:
             mv build/zephyr/zephyr.bin dist/${DEVICE}.bin
             xz -z dist/${DEVICE}.bin
             export SHA=$(sha256sum dist/${DEVICE}.bin.xz | cut -d " " -f 1)
-            jq '.os_list += [{ "name": env.OS_LIST_NAME, "description": env.OS_LIST_DESC, "icon": env.OS_LIST_ICON, "devices": [ env.DEVICE ], "tags": [ "zephyr" ], "image_download_sha256": env.SHA, "url": env.URL, "release_date": env.RELEASE_DATE } ]' os_list.json > os_list.json.tmp
+            EXTRACT_SIZE=$(xz --robot --list dist/${DEVICE}.bin.xz | awk 'END {print $5}')
+            jq --argjson extract_size $EXTRACT_SIZE '.os_list += [{ "name": env.OS_LIST_NAME, "description": env.OS_LIST_DESC, "icon": env.OS_LIST_ICON, "devices": [ env.DEVICE ], "tags": [ "zephyr" ], "image_download_sha256": env.SHA, "url": env.URL, "release_date": env.RELEASE_DATE, "extract_size": $extract_size } ]' os_list.json > os_list.json.tmp
             mv os_list.json.tmp os_list.json
 
       - name: Building For BeaglePlay
@@ -65,7 +66,8 @@ jobs:
             mv build/zephyr/zephyr.bin dist/${DEVICE}.bin
             xz -z dist/${DEVICE}.bin
             export SHA=$(sha256sum dist/${DEVICE}.bin.xz | cut -d " " -f 1)
-            jq '.os_list += [{ "name": env.OS_LIST_NAME, "description": env.OS_LIST_DESC, "icon": env.OS_LIST_ICON, "flasher": env.FLASHER, "subitems": [ { "name": env.OS_LIST_NAME, "description": env.OS_LIST_DESC, "icon": env.OS_LIST_ICON, "devices": [ env.DEVICE ], "tags": [ "zephyr" ], "image_download_sha256": env.SHA, "url": env.URL, "release_date": env.RELEASE_DATE } ] }]' os_list.json > os_list.json.tmp
+            EXTRACT_SIZE=$(xz --robot --list dist/${DEVICE}.bin.xz | awk 'END {print $5}')
+            jq --argjson extract_size $EXTRACT_SIZE '.os_list += [{ "name": env.OS_LIST_NAME, "description": env.OS_LIST_DESC, "icon": env.OS_LIST_ICON, "devices": [ env.DEVICE ], "tags": [ "zephyr" ], "image_download_sha256": env.SHA, "url": env.URL, "release_date": env.RELEASE_DATE, "extract_size": $extract_size } ]' os_list.json > os_list.json.tmp
             mv os_list.json.tmp os_list.json
 
       - name: Pre-Release
