.github: workflows: Update icon url
- Use URL from bb-imager-rs repo

Signed-off-by: Ayush Singh <ayush@beagleboard.org>

--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -16,7 +16,7 @@ jobs:
     env:
       OS_LIST_NAME: "MicroPython"
       OS_LIST_DESC: "MicroPython is a lean and efficient implementation of the Python 3 programming language, specifically designed to run on microcontrollers and other embedded systems"
-      OS_LIST_ICON: "https://upload.wikimedia.org/wikipedia/commons/4/4e/Micropython-logo.svg"
+      OS_LIST_ICON: "https://media.githubusercontent.com/media/beagleboard/bb-imager-rs/refs/heads/main/assets/os/micropython.webp"
     steps:
       - name: Checkout
         uses: actions/checkout@v4
